Make FieldTrialList usable after clearing VariationsParamsManager.

Calling |ClearAllVariationParams| will now create a new instance of the
FieldTrialList so |SetVariationParamsWithFeatureAssociations| will
work again.

BUG=672010

Review-Url: https://codereview.chromium.org/2590883002
Cr-Commit-Position: refs/heads/master@{#439824}

Former-commit-id: e0bf6128f18eedd05c1525c09d258df0080e8583